<resources>
    <string name="app_name">OnlineShopApp</string>
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="blog">Blog</string>
    <string name="basket">Basket</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="invoices">Invoices</string>
    <string name="register">Register</string>
    <string name="about">About</string>
    <string name="foll_name">Foll Name</string>
    <string name="username">(username)</string>
    <string name="products_category">Products Category</string>
    <string name="new_products">New Products</string>
    <string name="popular_products">Popular Products</string>
    <string name="expensive_products">Expensive Products</string>
    <string name="cheap_products">Cheap Products</string>
    <string name="new_filter">New</string>
    <string name="popular_filter">Popular</string>
    <string name="expensive_filter">Expensive</string>
    <string name="cheap_filter">Cheap</string>
    <string name="twice_back">please press BACK again to exit</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="total_count">Total Count</string>
    <string name="total_price">Total Price</string>
    <string name="basket_empty">Your basket is empty</string>
    <string name="add_to_card">Add to card</string>
    <string name="place_order">Place Order</string>
    <string name="update_info">Update</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="tel">Tel</string>
    <string name="address">Address</string>
    <string name="postal">Postal Code</string>
    <string name="items_list">Items list</string>
    <string name="no_internet">Please connect to the internet.</string>
    <string name="payment_description">Please fill and validate  your information to place order.</string>
    <string name="lorem">Until recently, the prevailing view assumed lorem ipsum was born as a nonsense text. It s not Latin, though it looks like it, and it actually says nothing,” Before ; After magazine answered a curious reader, “Its ‘words’ loosely approximate the frequency with which letters occur in English, which is why at a glance it looks pretty real… Until recently, the prevailing view assumed lorem ipsum was born as a nonsense text. It s not Latin, though it looks like it, and it actually says nothing,” Before &amp; After magazine answered a curious reader, “Its ‘words’ loosely approximate the frequency with which letters occur in English, which is why at a glance it looks pretty real</string>
</resources>