<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/products_category" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedChip="@+id/new_chip"
            android:paddingLeft="5dp"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/new_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/new_filter"
                app:chipIcon="@drawable/ic_baseline_new_releases_24" />

            <com.google.android.material.chip.Chip
                android:id="@+id/popular_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/popular_filter"
                app:chipIcon="@drawable/ic_baseline_mood_24" />

            <com.google.android.material.chip.Chip
                android:id="@+id/cheap_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/cheap_filter"
                app:chipIcon="@drawable/ic_baseline_money_off_24" />

            <com.google.android.material.chip.Chip
                android:id="@+id/expansive_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/expensive_filter"
                app:chipIcon="@drawable/ic_baseline_attach_money_24" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/filtered_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_products" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filtered_products_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>