<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="7dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/basket_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>


    <LinearLayout
        android:id="@+id/basket_empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/card_item_shape"
            android:gravity="center"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="14dp"
                android:text="@string/basket_empty"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp" />

        </LinearLayout>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="15dp"
            android:src="@drawable/empty_basket" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/basket_summery_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_item_shape"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="14dp"
                android:text="@string/total_count"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/basket_total_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="14dp"
                android:text="@string/total_price"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/basket_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_payment"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:text="@string/place_order"
        android:textColor="@color/white" />

</LinearLayout>